depl_bonita.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonita-depl
  namespace: bonita-ns
  labels:
    app: bonita
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bonita
  template:
    metadata:
      labels:
        app: bonita
    spec:
      containers:
        - name: bonita
          image: bonita
          ports:
            - containerPort: 8080
