depl_db_bonita.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-depl
  namespace: bonita-ns
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: bonitasoft/bonita-postgres:12.6
        ports:
        - containerPort: 5432
