challenge1_us1_bonita_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-depl
  namespace: bonita-ns
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: bonitasoft/bonita-postgres:12.6
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: bonita-ns
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
