service_bonita.yaml
apiVersion: v1
kind: Service
metadata:
  name: bonita-svc
  namespace: bonita-ns
spec:
  type: NodePort
  selector:
    app: bonita
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30300
