service_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: bonita-ns
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
