challenge1_us1_bonita_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonita-depl
  namespace: bonita-ns
  labels:
    app: bonita
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bonita
  template:
    metadata:
      labels:
        app: bonita
    spec:
      containers:
        - name: bonita
          image: bonita:8.0.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bonita-svc
  namespace: bonita-ns
spec:
  type: NodePort
  selector:
    app: bonita
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30300
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonita-ingress
  namespace: bonita-ns
  annotations:
spec:
  rules:
    - host: bonita.grenoble
      http:
        paths:
          - path: /bonita/
            pathType: Prefix
            backend:
              service:
                name: bonita-svc
                port:
                  number: 8080
